test/expected/explain_co_less_rck_i++default.out
struct S; explain int operator<(S const&) const = default
         ^
10: error: operator < must return bool
